--- a/-class-files/05_inicio_css.html
+++ b/-class-files/05_inicio_css.html
@@ -17,6 +17,10 @@
             line-height: 42px;
             color: #777;
             text-transform: uppercase;
+            text-align: center;
+            border: 2px solid yellow;
+            padding: 15px;
+            margin-bottom: 30px
         }
         
         h2 {
@@ -26,6 +30,10 @@
             line-height: 32px;
             color: #777;
             text-transform: uppercase;
+            text-align: center;
+            border: 2px solid blue;
+            padding: 8px;
+            margin-bottom: 24px
         }
         
         p {
