--- a/-class-files/05_inicio_css.html
+++ b/-class-files/05_inicio_css.html
@@ -31,9 +31,9 @@
             color: #777;
             text-transform: uppercase;
             text-align: center;
-            border: 2px solid blue;
-            padding: 8px;
-            margin-bottom: 24px
+            border-bottom: 2px solid blue;
+            padding: 4px;
+            margin-top: 24px
         }
         
         p {
