--- a/-class-files/File 9/index.html
+++ b/-class-files/File 9/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Teste</title>
+    <title>Projeto One</title>
     <link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
     <div class="main">
-        <header>
+        <header class="hero">
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
@@ -22,7 +22,7 @@
         </header>
     
         <main>
-            <section>
+            <section class="cards-conatiner"> 
                 <div class="cards">
                     <div class="card">
                         <img src="public/assets/card_01.png" alt="card seletores">
@@ -41,11 +41,11 @@
                 </div>
             </section>
             
-            <section>
+            <section class="article-container">
                 <article>
-                    <!-- <header> -->
+                    <header>
                         <h2>Título</h2>
-                    <!-- </header>-->
+                    </header>
                     <p>Primeiro parágrafo de exemplo</p>
                     <p>Segundo parágrafo de exemplo</p>
                 </article>
