--- a/-project-files/Projeto 1/index.html
+++ b/-project-files/Projeto 1/index.html
@@ -15,7 +15,7 @@
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
-            <div>
+            <div class="hero-content">
                 <h1>Curso web <br>fundamentos</h1>
                 <p>Aprenda HTML, CSS e JavaScript</p>
             </div>
