--- a/-class-files/File 17/17_formlogin.html
+++ b/-class-files/File 17/17_formlogin.html
@@ -6,7 +6,7 @@
 
     <style>
         .form-login {
-            width: 30%;
+            width: 400px;
             margin: 50px auto 0;
             font-family: sans-serif;
         }
