--- a/-class-files/File 18/18_form.html
+++ b/-class-files/File 18/18_form.html
@@ -13,7 +13,7 @@
             <legend>Dados pessoais</legend>
 
             <label>Email</label>
-            <input type="email">
+            <input type="email" required>
             <br>
             <label>Número de filhos</label>
             <input type="number" min="0">
@@ -23,16 +23,75 @@
             <br>
             <p>Sexo</p>
             <label>
-                <input type="radio" name="sexo" value="M">
-                Masculino
+                <input type="radio" name="sexo" value="M">Masculino
             </label>
             <label>
-                <input type="radio" name="sexo" value="F">
-                Feminino
+                <input type="radio" name="sexo" value="F">Feminino
             </label>
             <br>
-            <input type="submit" value="Enviar">
+
+            <input type="hidden" name="expira" value="2018-12-30">
+
+            <label>Estdado</label>
+            <select name="estado">
+                <option value="0">Selecione</option>
+                <option value="SP">São Paulo</option>
+                <option value="RJ">Rio de Janeiro</option>
+                <option value="MG">Minas Gerais</option>
+            </select>
         </fieldset>
+
+        <fieldset>
+            <legend>Área de interesse</legend>
+
+            <label><input type="checkbox" name="html" value="html">HTML</label>
+            <label><input type="checkbox" name="css" value="css">CSS</label>
+            <label><input type="checkbox" name="js" value="js">JavaScript</label>
+        </fieldset>
+
+        <fieldset>
+            <legend>Mensagem</legend>
+            <textarea style="resize: none; outline: none;" name="" cols="30" rows="10" maxlength="10"></textarea>
+            <textarea style="resize: none; outline: none;" name="" cols="30" rows="10" readonly>Aqui entra o texto do contrato que necessita ser aceito.</textarea>
+            <label><input type="checkbox" checked>Lí e aceito</label>
+            <br>
+            <input type="range" min="0" max="10" step="2">
+            <input type="time">
+            <input type="color">
+            <br>
+            <select multiple>
+                <option>Opção 1</option>
+                <option>Opção 2</option>
+                <option>Opção 3</option>
+                <option>Opção 4</option>
+                <option>Opção 5</option>
+            </select>
+        </fieldset>
+
+        <fieldset>
+            <legend>Currículo</legend>
+
+            <label>Anexar um arquivo:</label>
+            <input type="file">
+        </fieldset>
+
+        <fieldset>
+            <legend>Avulsos</legend>
+
+            <label>Telefone</label>
+            <input type="tel">
+            <br>
+            <label>Url</label>
+            <input type="url">
+            <br>
+            <label>Search</label>
+            <input type="search">
+        </fieldset>
+
+        <input type="submit" value="Enviar">
+        <input type="button" value="Button">
+        <input type="reset" value="Reset">
+
     </form>
 </body>
 </html>
