Aula 51 - Tipos de entradas - part 3

--- a/-class-files/File 18/18_form.html
+++ b/-class-files/File 18/18_form.html
@@ -13,7 +13,7 @@
             <legend>Dados pessoais</legend>
 
             <label>Email</label>
-            <input type="email" required>
+            <input type="email" placeholder="Digite um email válido" required>
             <br>
             <label>Número de filhos</label>
             <input type="number" min="0">
