--- a/-project-files/Projeto Strata/index.html
+++ b/-project-files/Projeto Strata/index.html
@@ -5,6 +5,336 @@
     <title>Projeto Strata</title>
 </head>
 <body>
-    <h1>Projeto Strata</h1>
+    <header>
+        <img src="#" alt="Imagem de perfil">
+        <p>Trabalho e groselhas de <br>Daniel Tapias Morales, <br>um zé ninguém qualquer</p>
+        <p>Retirado de <a href="html5up.net">html5up.net</a></p>
+    </header>
+
+    <main>
+        <section class="hero-content">
+            <h1>Quando o header é aside e o aside é no header</h1>
+            <p>
+                Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.
+            </p>
+            <a href="#">Veja mais</a>
+        </section>
+
+        <section class="recent-content">
+            <div class="cards">
+                <div class="card">
+                    <img src="#" alt="Card_1 Image">
+                    <p>Magna sed consequat tempus</p>
+                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                </div>
+
+                <div class="card">
+                    <img src="#" alt="Card_2 Image">
+                    <p>Ultricies lacinia interdum</p>
+                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                </div>
+
+                <div class="card">
+                    <img src="#" alt="Card_3 Image">
+                    <p>Tortor metus commodo</p>
+                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                </div>
+
+                <div class="card">
+                    <img src="#" alt="Card_4 Image">
+                    <p>Quam neque phasellus</p>
+                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                </div>
+
+                <div class="card">
+                    <img src="#" alt="Card_5 Image">
+                    <p>Nunc enim commodo aliquet</p>
+                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                </div>
+
+                <div class="card">
+                    <img src="#" alt="Card_6 Image">
+                    <p>Risus ornare lacinia</p>
+                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                </div>
+            </div>
+            <a href="#">Veja Portifolio completo</a>
+        </section>
+
+        <section class="touch-content">
+            <h2>Get in Touch</h2>
+            <p>
+                Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.
+            </p>
+
+            <form action="#">
+                <fieldset>
+                    <label for="">Nome</label>
+                    <input type="text" placeholder="Nome completo">
+
+                    <label for="">Email</label>
+                    <input type="email" name="" id="">
+
+                    <label for="">Digite sua mensagem</label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+
+                    <div class="endereco-content">
+                        <p><i>Endereço: 1234 Somewhere Rd. Nashville, TN 00000 United States <br>Telefone: 000-000-000 <br>E-mail: email@server.com</i></p>
+                    </div>
+
+                    <button type="submit">Enviar</button>
+                </fieldset>
+            </form>  
+        </section>
+
+        <section class="elements-content">
+            <h2>Elements</h2>
+            <div class="text-content">
+                <h3>Text</h3>
+                <p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> text and this is <sub>subscript</sub> text. This is <u>underlined</u> and this is code: for (;;) { ... }. Finally, this is a <a href="#">link</a>.</p>
+                <h1>Título H1</h1>
+                <h2>Título H2</h2>
+                <h3>Título H3</h3>
+                <h4>Título H4</h4>
+                <h5>Título H5</h5>
+                <h6>Título H6</h6>
+                <cite>
+                    <p>Esta é uma citação tirada da Mozilla Developer Center.</p>
+                    <p>outros paragráfos</p>
+                </cite>
+                <p>
+                    According to Mozilla's website, Firefox 1.0 was released in 2004 and became a big success.
+                </p>
+            </div>
+
+            <div class="preformatado-content">
+                <h3>Preformatado</h3>
+                <pre>
+                    <!-- <script>
+                        alert('oi');
+                    </script> -->
+                </pre> 
+            </div>
+
+            <div class="listas-content">
+                <h3>Listas</h3>
+                <p>Não ordenada</p>
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ul>
+
+                <p>Ordenada</p>
+                <ol>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ol>
+
+                <p>Alternate</p>
+            </div>
+
+            <div class="table-content">
+                <h2>Table</h2>
+                <table>
+                    <caption>Default</caption>
+
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">S</td>
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        <tr>
+                            <td>Item One</td>
+                            <td>Ante turpis integer aliquet porttitor.</td>
+                            <td>29.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Two</td>
+                            <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                            <td>19.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Three</td>
+                            <td>Morbi faucibus arcu accumsan lorem.</td>
+                            <td>29.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Four</td>
+                            <td>Vitae integer tempus condimentum.</td>
+                            <td>19.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Five</td>
+                            <td>Ante turpis integer aliquet porttitor.</td>
+                            <td>29.99</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <table>
+                    <caption>Alternate</caption>
+
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">100.00</td>
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        <tr>
+                            <td>Item One</td>
+                            <td>Ante turpis integer aliquet porttitor.</td>
+                            <td>29.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Two</td>
+                            <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                            <td>19.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Three</td>
+                            <td>Morbi faucibus arcu accumsan lorem.</td>
+                            <td>29.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Four</td>
+                            <td>Vitae integer tempus condimentum.</td>
+                            <td>19.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Five</td>
+                            <td>Ante turpis integer aliquet porttitor.</td>
+                            <td>29.99</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="buttons-content">
+            Buttons here
+        </section>
+
+        <section class="forms-content">
+            <h2>Forms</h2>
+            <form action="#">
+                <fieldset>
+                    <label for="">Nome</label>
+                    <input type="text">
+
+                    <label for="">Email</label>
+                    <input type="email" name="" id="">
+
+                    <select name="" id="">
+                        <option value="0">Selecione</option>
+                        <option value="SP">São Paulo</option>
+                        <option value="RJ">Rio de Janeiro</option>
+                        <option value="MG">Minas Gerais</option>
+                    </select>
+
+                    <label for="low">
+                        <input type="radio" name="" id="low">
+                        Baixa Prioridade
+                    </label>
+
+                    <label for="medium">
+                        <input type="radio" name="" id="medium">
+                        Média Prioridade
+                    </label>
+                    
+                    <label for="high">
+                        <input type="radio" name="" id="high">
+                        Alta Prioridade
+                    </label>
+                    
+                    <label for="copy">
+                        <input type="checkbox" name="" id="copy">
+                        Envie-me uma cópia
+                    </label>
+                    <label for="human">
+                        <input type="checkbox" name="" id="human">
+                        Sou Humano
+                    </label>
+
+                    <label for="">Mensagem:</label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <button type="submit">Enviar</button>
+                    <button>Limpar</button>
+                </fieldset>
+            </form>
+        </section>
+
+        <section class="image-content">
+            <h2>Imagens</h2>
+            <div class="cards-imagens">
+                <div class="card-image">
+                    <img src="#" alt="A">
+                </div>
+
+                <div class="card-image">
+                    <img src="#" alt="B">
+                </div>
+
+                <div class="card-image">
+                    <img src="#" alt="C">
+                </div>
+
+                <div class="card-image">
+                    <img src="#" alt="D">
+                </div>
+
+                <div class="card-image">
+                    <img src="#" alt="E">
+                </div>
+
+                <div class="card-image">
+                    <img src="#" alt="F">
+                </div>
+
+                <div class="card-image">
+                    <img src="#" alt="G">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>Left & Right</h2>
+            <div>
+                <img src="#" alt="left">
+                <p>
+                    Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.
+                </p>
+            </div>
+
+            <div>
+                <img src="#" alt="right">
+                <p>
+                    Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.
+                </p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <a href="#"><img src="#" alt="Link twiter"></a>
+        <a href="#"><img src="#" alt="Link facebook"></a>
+        <p>&copy; Untitled | Design: <a href="#">HTML5 UP</a></p>
+    </footer>
 </body>
 </html>
