--- a/-project-files/Projeto Strata/index.html
+++ b/-project-files/Projeto Strata/index.html
@@ -3,136 +3,179 @@
 <head>
     <meta charset="UTF-8">
     <title>Projeto Strata</title>
+    <script src="https://kit.fontawesome.com/fea9e822cf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <img src="#" alt="Imagem de perfil">
-        <p>Trabalho e groselhas de <br>Daniel Tapias Morales, <br>um zé ninguém qualquer</p>
-        <p>Retirado de <a href="html5up.net">html5up.net</a></p>
+        <a href="index.html"><img src="#" alt="Imagem de perfil"></a>
+        <h1>
+            Trabalho e groselhas de <br>
+            <strong>Daniel Tapias Morales</strong>, <br>
+            um zé ninguém qualquer. <br>
+            Retirado de <a href="https://html5up.net">html5up.net</a>.
+        </h1>
     </header>
 
     <main>
         <section class="hero-content">
-            <h1>Quando o header é aside e o aside é no header</h1>
+            <h2>Quando o header é aside e o aside é no header</h2>
             <p>
                 Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.
             </p>
-            <a href="#">Veja mais</a>
+            <a class="button-default" href="#">Veja mais</a>
         </section>
 
         <section class="recent-content">
-            <div class="cards">
-                <div class="card">
-                    <img src="#" alt="Card_1 Image">
-                    <p>Magna sed consequat tempus</p>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </div>
+                <h3>Recent Work</h3>
+                <article class="cards">
+                    <div class="card">
+                        <img src="/public/assets/thumbs/01.jpg" alt="Card_1 Image">
+                        <p>Magna sed consequat tempus</p>
+                        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                    </div>
 
-                <div class="card">
-                    <img src="#" alt="Card_2 Image">
-                    <p>Ultricies lacinia interdum</p>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </div>
+                    <div class="card">
+                        <img src="/public/assets/thumbs/02.jpg" alt="Card_2 Image">
+                        <p>Ultricies lacinia interdum</p>
+                        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                    </div>
 
-                <div class="card">
-                    <img src="#" alt="Card_3 Image">
-                    <p>Tortor metus commodo</p>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </div>
+                    <div class="card">
+                        <img src="/public/assets/thumbs/03.jpg" alt="Card_3 Image">
+                        <p>Tortor metus commodo</p>
+                        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                    </div>
 
-                <div class="card">
-                    <img src="#" alt="Card_4 Image">
-                    <p>Quam neque phasellus</p>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </div>
+                    <div class="card">
+                        <img src="/public/assets/thumbs/04.jpg" alt="Card_4 Image">
+                        <p>Quam neque phasellus</p>
+                        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                    </div>
 
-                <div class="card">
-                    <img src="#" alt="Card_5 Image">
-                    <p>Nunc enim commodo aliquet</p>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </div>
+                    <div class="card">
+                        <img src="/public/assets/thumbs/05.jpg" alt="Card_5 Image">
+                        <p>Nunc enim commodo aliquet</p>
+                        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                    </div>
 
-                <div class="card">
-                    <img src="#" alt="Card_6 Image">
-                    <p>Risus ornare lacinia</p>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </div>
-            </div>
-            <a href="#">Veja Portifolio completo</a>
+                    <div class="card">
+                        <img src="/public/assets/thumbs/06.jpg" alt="Card_6 Image">
+                        <p>Risus ornare lacinia</p>
+                        <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+                    </div>
+                </article>
+                <a href="#">Veja Portifolio completo</a>
         </section>
 
         <section class="touch-content">
-            <h2>Get in Touch</h2>
+            <h3>Get in Touch</h3>
             <p>
                 Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.
             </p>
 
-            <form action="#">
-                <fieldset>
-                    <label for="">Nome</label>
-                    <input type="text" placeholder="Nome completo">
+            <form action="#" method="POST">
+                <label for="name">Nome</label>
+                <input type="text" name="name" id="name" placeholder="Nome completo">
 
-                    <label for="">Email</label>
-                    <input type="email" name="" id="">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
 
-                    <label for="">Digite sua mensagem</label>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                <label for="mensagem">Digite sua mensagem</label>
+                <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
 
-                    <div class="endereco-content">
-                        <p><i>Endereço: 1234 Somewhere Rd. Nashville, TN 00000 United States <br>Telefone: 000-000-000 <br>E-mail: email@server.com</i></p>
-                    </div>
+                <button type="submit">Enviar</button>
+            </form> 
+            
+            <address>
+                <p>
+                    <span>Endereço: </span>
+                    1234 Somewhere Rd. Nashville, TN 00000 United States
+                </p>
 
-                    <button type="submit">Enviar</button>
-                </fieldset>
-            </form>  
+                <p>
+                    <span>Telefone: </span>
+                    000-000-000
+                </p>
+
+                <p>
+                    <span>Email: </span>
+                    email@server.com
+                </p>
+            </address>
         </section>
 
         <section class="elements-content">
-            <h2>Elements</h2>
+            <h3>Elements</h3>
             <div class="text-content">
-                <h3>Text</h3>
-                <p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> text and this is <sub>subscript</sub> text. This is <u>underlined</u> and this is code: for (;;) { ... }. Finally, this is a <a href="#">link</a>.</p>
+                <h4>Text</h4>
+                <p>
+                    This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> text and this is <sub>subscript</sub> text. This is <u>underlined</u> and this is code: <code>for (;;) { ... }.</code> Finally, this is a <a href="#">link</a>.
+                </p>
+            </div>
+
+            <div class="titles-content">
+                <h4>Titles</h4>
                 <h1>Título H1</h1>
                 <h2>Título H2</h2>
                 <h3>Título H3</h3>
                 <h4>Título H4</h4>
                 <h5>Título H5</h5>
                 <h6>Título H6</h6>
-                <cite>
-                    <p>Esta é uma citação tirada da Mozilla Developer Center.</p>
-                    <p>outros paragráfos</p>
-                </cite>
+            </div>
+                
+            <div class="blockquote-content">
+                <h4>Blockquote & q</h4>
+                <blockquote cite="http://developer.mozilla.org">
+                    <p>
+                        Esta é uma citação tirada da Mozilla Developer Center.
+                    </p>
+                </blockquote>
+
                 <p>
-                    According to Mozilla's website, Firefox 1.0 was released in 2004 and became a big success.
+                    According to Mozilla's website,
+                    <q cite="https://www.mozilla.org/en-US/about/history/details/">Firefox 1.0 was released in 2004 and became a big success.</q>
                 </p>
             </div>
 
             <div class="preformatado-content">
-                <h3>Preformatado</h3>
+                <h4>Preformatado</h4>
                 <pre>
-                    <!-- <script>
-                        alert('oi');
-                    </script> -->
+                    <code>
+&lt;script&gt;
+    alert('oi');
+&lt;/script&gt;
+                    </code>
                 </pre> 
             </div>
 
             <div class="listas-content">
-                <h3>Listas</h3>
-                <p>Não ordenada</p>
+                <h4>Lists</h4>
+                <h5>Não ordenada</h5>
                 <ul>
                     <li>Item 1</li>
                     <li>Item 2</li>
                     <li>Item 3</li>
                 </ul>
 
-                <p>Ordenada</p>
+                <h5>Ordenada</h5>
                 <ol>
                     <li>Item 1</li>
                     <li>Item 2</li>
                     <li>Item 3</li>
                 </ol>
 
-                <p>Alternate</p>
+                <h5>Alternate</h5>
+                <ul class="ul-alternate">
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ul>
+
+                <h5>Icons</h5>
+                <ul>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-square"></i></li>
+                </ul>
             </div>
 
             <div class="table-content">
