Projeto Strata - CSS Inicio

--- a/-project-files/Projeto Strata/index.html
+++ b/-project-files/Projeto Strata/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Projeto Strata</title>
-    <!-- <link rel="stylesheet" href="/public/styles/style.css"> -->
+    <link rel="stylesheet" href="/public/styles/normalize.css">
+    <link rel="stylesheet" href="/public/styles/style.css">
     <script src="https://kit.fontawesome.com/fea9e822cf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <a href="index.html"><img src="/public/assets/avatar.jpg" alt="Imagem de perfil"></a>
-        <h1>
+        <h1 class="header-title">
             Trabalho e groselhas de <br>
             <strong>Daniel Tapias Morales</strong>, <br>
             um zé ninguém qualquer. <br>
-            Retirado de <a href="https://html5up.net">html5up.net</a>.
+            Retirado de <a class="header-link" href="https://html5up.net">html5up.net</a>.
         </h1>
     </header>
 
