--- a/-project-files/Projeto Strata/index.html
+++ b/-project-files/Projeto Strata/index.html
@@ -150,36 +150,40 @@
 
             <div class="lists-container">
                 <h4>Lists</h4>
-                <h5>Não ordenada</h5>
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
+                <div class="row">
+                    <div class="col-2">
+                        <h5>Não ordenada</h5>
+                        <ul>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                        </ul>
 
-                <h5>Ordenada</h5>
-                <ol>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ol>
+                        <h5>Ordenada</h5>
+                        <ol>
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                        </ol>
+                    </div>
 
-                <h5>Alternate</h5>
-                <ul class="ul-alternate">
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
+                    <div class="col-2">
+                        <h5>Alternate</h5>
+                        <ul class="ul-alternate">
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                        </ul>
+                        
+                        <h5>Icons</h5>
+                        <ul class="ul-icons">
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-facebook-square"></i></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-
-            <div class="icon-container">
-                <h5>Icons</h5>
-                <ul>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-facebook-square"></i></li>
-                </ul>
-            </div>
-                
+ 
             <div class="actions-container">
                 <h5>Actions</h5>
                 <p>
