Projeto Strata - CSS Update 4

--- a/-project-files/Projeto Strata/index.html
+++ b/-project-files/Projeto Strata/index.html
@@ -13,9 +13,9 @@
         <h1 class="header-title">
             Trabalho e groselhas de <br>
             <strong>Daniel Tapias Morales</strong>, <br>
-            um zé ninguém qualquer. <br>
-            Retirado de <a class="header-link" href="https://html5up.net">html5up.net</a>.
+            um zé ninguém qualquer.
         </h1>
+        <p>Retirado de <a class="header-link" href="https://html5up.net">html5up.net</a>.</p>
     </header>
 
     <main>
@@ -417,7 +417,7 @@
 
         <section>
             <h2>Left & Right</h2>
-            <div>
+            <div class="fleft">
                 <p>
                     <img class="img-left" src="/public/assets/avatar.jpg" alt="left">
                     Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.
@@ -425,8 +425,8 @@
             </div>
 
             <div>        
-                <p>
-                    <img class="img-left" src="/public/assets/avatar.jpg" alt="right">
+                <p class="fright">
+                    <img class="img-right" src="/public/assets/avatar.jpg" alt="right">
                     Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.
                 </p>
             </div>
@@ -434,9 +434,13 @@
     </main>
 
     <footer>
-        <a href="#"><img src="#" alt="Link twiter"></a>
-        <a href="#"><img src="#" alt="Link facebook"></a>
-        <p>&copy; Untitled | Design: <a href="#">HTML5 UP</a></p>
+        <ul class="ul-icons">
+            <li><a href="#"><i class="fab fa-twitter"></i></li>
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        </ul>
+        <ul class="cop">
+            <li><p>&copy; Untitled | Design: <a class="flink" href="#">HTML5 UP</a></p></li>
+        </ul> 
     </footer>
 </body>
 </html>
