--- a/-class-files/File 27/27_pseudo.html
+++ b/-class-files/File 27/27_pseudo.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <h1>Pseudo-h1></h1>
+    <h1>Pseudo</h1>
 
     <label><input type="checkbox" value="Sim"> Aceito os termos</label>
 
