Projeto RanH - HTML

--- a/-class-files/File 34/34_media_queries.html
+++ b/-class-files/File 34/34_media_queries.html
@@ -37,6 +37,7 @@
             background-color: rgba(210, 105, 30, 0.473);
             margin-bottom: 15px;
             height: 150px;
+            font-size: 22px;
         }
 
         .clearfix::after {
