Projeto RanH - CSS Responsive Update 1

--- a/-project-files/Projeto Range Hotels/index.html
+++ b/-project-files/Projeto Range Hotels/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/public/styles/icomoon/style.css">
 </head>
 <body>
-    <header>
-        <div class="img_logo">
-            <a href="#"><img src="/public/assets/logo_mob.svg"></a>
+    <header class="clearfix">
+        <div class="i_container">
+            <img src="/public/assets/logo_mob.svg">
         </div>
         <nav class="nav_container">
             <ul>
