Projeto RanH - CSS Responsive Update 3

--- a/-project-files/Projeto Range Hotels/index.html
+++ b/-project-files/Projeto Range Hotels/index.html
@@ -31,7 +31,7 @@
             </div>
         </section>
 
-        <span class="spiv"></span>
+        <span class="spiv spivone"></span>
         
         <section class="second_container">
             <article>
