Aula 146 - Auto-rows

--- a/-class-files/File 45/45_auto-fill_fit.html
+++ b/-class-files/File 45/45_auto-fill_fit.html
@@ -14,6 +14,7 @@
             gap: 8px;
             /* grid-template-columns: repeat(Auto-Fill, 100px); - (Auto-Fill) Vai deixar colunas em branco para serem preenchidas posteriormente */
             grid-template-columns: repeat(Auto-Fit, minmax(100px, 1fr)); /* (Auto-Fit) Divide o espaço reserva entre os elementos ja existentes */
+            grid-auto-rows: 100px;
         }
 
         .grid_item {
@@ -31,7 +32,7 @@
         <div class="grid_item">1</div>
         <div class="grid_item">2</div>
         <div class="grid_item">3</div>
-        <!-- <div class="grid_item">4</div>
+        <div class="grid_item">4</div>
         <div class="grid_item">5</div>
         <div class="grid_item">6</div>
         <div class="grid_item">7</div>
@@ -39,7 +40,7 @@
         <div class="grid_item">9</div>
         <div class="grid_item">10</div>
         <div class="grid_item">11</div>
-        <div class="grid_item">12</div> -->
+        <div class="grid_item">12</div>
     </div>
 </body>
 </html>
