--- a/-class-files/JS/File 3/3_exercicio.html
+++ b/-class-files/JS/File 3/3_exercicio.html
@@ -10,15 +10,11 @@
     <script>
         let n1 = parseInt(prompt("Digite um número: "))
         let n2 = parseInt(prompt("Digite outro número: "))
-        let sub = n1 - n2
-        let mult = n1 * n2
-        let div = n1 / n2
-        let soma = n1 + n2
-        
-        alert(n1 + " - " + n2 + " = " + sub + 
-        "\n" + n1 + " * " + n2 + " = " + mult + 
-        "\n" + n1 + " / " + n2 + " = " + div + 
-        "\n"+ n1 + " + " + n2 + " = " + soma)
+
+        alert(n1 + " - " + n2 + " = " + (n1 - n2) + 
+        "\n" + n1 + " * " + n2 + " = " + (n1 * n2) + 
+        "\n" + n1 + " / " + n2 + " = " + (n1 / n2) + 
+        "\n"+ n1 + " + " + n2 + " = " + (n1 + n2))
         
     </script>
 </body>
