Aula 228 - IIFE & Arguments

--- a/-class-files/Javascript/File 3/3_iife_arguments.html
+++ b/-class-files/Javascript/File 3/3_iife_arguments.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IFEE & Arguments</title>
+    <title>IIFE & Arguments</title>
 </head>
 <body>
-    <h1>IFEE & Arguments</h1>
+    <h1>IIFE & Arguments</h1>
 
     <button onclick="Show()">Minha função</button>
     <div class="output"></div>
 
     <script>
-        //IFEE
+        //IIFE
         (function(){
             'use strict' // Não permite que variáveis sejam 
             //declaradas sem (var ou let) antes, não permitindo 
