--- a/-class-files/Javascript/File 12/12_propagacao_de_evento.html
+++ b/-class-files/Javascript/File 12/12_propagacao_de_evento.html
@@ -25,8 +25,9 @@
             alert("Eu sou o parágrafo")
         })
 
-        $divoneSpan.addEventListener("click", function(){
+        $divoneSpan.addEventListener("click", function(e){
             alert("Eu sou o span")
+            e.stopPropagation()
         })
     </script>
 </body>
