--- a/-class-files/Javascript/File 27/1_exercício.html
+++ b/-class-files/Javascript/File 27/1_exercício.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="pop-up">
             <span class="close">&times;</span>
-            <img src="1.jpg">
+            <img src="assets/1.jpg">
             <p class="pop-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, odio quibusdam tempore adipisci explicabo animi dicta quo magni quia beatae minima officiis doloribus voluptatibus pariatur, recusandae omnis cupiditate quis provident.</p>
         </div>
     </div>
