Aula 306 - Timer_relógio

--- a/-class-files/Javascript/File 27/1_exercicio.html
+++ b/-class-files/Javascript/File 27/1_exercicio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Timer - Exercício</title>
+    <title>Timer - Exercício I</title>
     <script src="../Framework/beluga.js"></script>
 
     <style>
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <h1>Timer - Exercício</h1>
+    <h1>Timer - Exercício I</h1>
     <p>Criar um pop-up irritante que pula na interface<br> do usuário, depois de 3 segundos este mesmo<br> pop-up deve ser fechado automaticamente<br>(sem se importar se o usuário está lendo ou não),<br> a idéia é que seja irritante.</p>
 
     <hr>
