Projeto Infusion -  CSS Point 1

--- a/-project-files/Projeto Infusion/index.html
+++ b/-project-files/Projeto Infusion/index.html
@@ -33,64 +33,72 @@
         </section>
 
         <section class="second_container">
-            <div class="card_second">
+            <div class="cards_second">
                 <div class="card_second">
                     <div class="bg_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/c01.jpg">
                     </div>
                     <div class="profile_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/av1.jpg">
                     </div>
-                    <div class="title_second">
-                        <h3>Tempor rutrum elementum rutrum convallis ipsum duis etiam porttitor</h3>
-                    </div>
-                    <div class="description_second">
-                        <p>justo scelerisque ad est feugiat condimentum vivamus fermentum sed, hendrerit libero nulla elementum venenatis imperdiet euismod. nec senectus tempus adipiscing urna mollis quisque felis duis, habitasse molestie mauris tortor posuere quam magna diam, ligula nulla maecenas lectus mollis donec nibh.</p>
+                    <div class="card_people_content">
+                        <div class="title_second">
+                            <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                        </div>
+                        <div class="description_second">
+                            <p>justo scelerisque ad est feugiat condimentum vivamus fermentum sed, hendrerit libero nulla elementum venenatis imperdiet euismod. nec senectus tempus adipiscing urna mollis quisque felis duis, habitasse molestie mauris tortor posuere quam magna diam, ligula nulla maecenas lectus mollis donec nibh.</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card_second">
                     <div class="bg_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/c02.jpg">
                     </div>
                     <div class="profile_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/av2.jpg">
                     </div>
-                    <div class="title_second">
-                        <h3>Sapien aptent lobortis molestie nisl gravida orci felis molestie, inceptos molestie suscipit commodo tellus varius urna tristique nunc</h3>
-                    </div>
-                    <div class="description_second">
-                        <p>non sociosqu lorem est mauris ultricies donec. ornare morbi torquent nulla ultricies non placerat aptent eros, odio commodo lorem ut lectus mollis lacinia nam, orci suspendisse in per volutpat fermentum per. lectus nisl torquent donec etiam ac diam mollis cubilia, quam ultricies sem ac nam malesuada litora praesent, ultricies luctus ac egestas donec tempor ligula.</p>
+                    <div class="card_people_content">
+                        <div class="title_second">
+                            <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                        </div>
+                        <div class="description_second">
+                            <p>non sociosqu lorem est mauris ultricies donec. ornare morbi torquent nulla ultricies non placerat aptent eros, odio commodo lorem ut lectus mollis lacinia nam, orci suspendisse in per volutpat fermentum per. lectus nisl torquent donec etiam ac diam mollis cubilia, quam ultricies sem ac nam malesuada litora praesent, ultricies luctus ac egestas donec tempor ligula.</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card_second">
                     <div class="bg_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/c03.jpg">
                     </div>
                     <div class="profile_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/av3.jpg">
                     </div>
-                    <div class="title_second">
-                        <h3>Nulla magna duis vivamus cursus ac cubilia etiam, morbi torquent eros cras aenean felis ante fringilla</h3>
-                    </div>
-                    <div class="description_second">
-                        <p>arcu eu cursus habitasse aliquam blandit. netus aenean blandit quam sed nullam et massa hac luctus, tempor libero neque hac metus ante sagittis consectetur consequat urna, massa lacus tellus leo pellentesque lectus neque tellus. nisi ultrices litora placerat sapien id odio, aenean sit pharetra purus at turpis ut, adipiscing sapien donec id pretium.</p>
+                    <div class="card_people_content">
+                        <div class="title_second">
+                            <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                        </div>
+                        <div class="description_second">
+                            <p>arcu eu cursus habitasse aliquam blandit. netus aenean blandit quam sed nullam et massa hac luctus, tempor libero neque hac metus ante sagittis consectetur consequat urna, massa lacus tellus leo pellentesque lectus neque tellus. nisi ultrices litora placerat sapien id odio, aenean sit pharetra purus at turpis ut, adipiscing sapien donec id pretium.</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card_second">
                     <div class="bg_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/c04.jpg">
                     </div>
                     <div class="profile_imgs_second">
-                        <img src="#">
+                        <img src="public/assets/av4.jpg">
                     </div>
-                    <div class="title_second">
-                        <h3>Volutpat varius sociosqu sem porttitor taciti litora</h3>
-                    </div>
-                    <div class="description_second">
-                        <p>sagittis luctus amet ac etiam, eget curae varius condimentum pharetra himenaeos, consequat tincidunt odio duis. orci velit tempus sagittis per aenean gravida vestibulum justo orci, feugiat integer curae a pharetra semper aliquet ornare, purus ultrices aptent ante tempus quisque vehicula placerat. netus nam vel consectetur vel placerat fermentum faucibus morbi sed.</p>
+                    <div class="card_people_content">
+                        <div class="title_second">
+                            <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                        </div>
+                        <div class="description_second">
+                            <p>sagittis luctus amet ac etiam, eget curae varius condimentum pharetra himenaeos, consequat tincidunt odio duis. orci velit tempus sagittis per aenean gravida vestibulum justo orci, feugiat integer curae a pharetra semper aliquet ornare, purus ultrices aptent ante tempus quisque vehicula placerat. netus nam vel consectetur vel placerat fermentum faucibus morbi sed.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -114,51 +122,47 @@
             <h3>Latest articles</h3>
             <div class="cards_fourth">
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/01.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/02.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/03.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/04.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/05.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/06.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/07.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/08.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/09.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/11.jpg">
                 </div>
 
                 <div class="card_fourth">
-                    <img src="#">
-                </div>
-
-                <div class="card_fourth">
-                    <img src="#">
+                    <img src="public/assets/articles/12.jpg">
                 </div>
             </div>
         </section>
@@ -195,7 +199,7 @@
     </main>
 
     <footer>
-        <h3>Infusion</h3>
+        <h4>Infusion</h4>
         <p>Accumsan fringilla suscipit imperdiet donec rutrum enim lorem ut, malesuada ullamcorper eros imperdiet duis ante ligula, congue ornare cursus enim ultrices dolor quisque. donec sed aliquam porta quisque turpis fermentum nibh, dictumst quisque nisi odio facilisis rutrum etiam non, lacus consectetur proin mauris gravida donec.</p>
         <p>feugiat aliquet ultrices ad torquent ultrices sagittis velit diam, nisl ultricies dapibus mollis tempus primis justo primis, imperdiet morbi auctor quisque aenean a mattis.</p>
         <div class="useful_links">
