--- a/-project-files/Projeto Infusion/index.html
+++ b/-project-files/Projeto Infusion/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infusion</title>
     <link rel="stylesheet" href="public/styles/normalize.css">
     <link rel="stylesheet" href="public/styles/style.css">
@@ -108,7 +108,7 @@
             <div class="first_content">
                 <h3>Ornare luctus ac elit litora ultricies tortor, inceptos elit quisque ut platea lacinia, velit tortor faucibus accumsan quis.</h3>
                 <p>gravida dictum blandit fringilla elit viverra euismod placerat condimentum sociosqu, curabitur ut himenaeos sed dui hac facilisis litora viverra, egestas mattis at curabitur pellentesque eros placerat molestie. platea lobortis in neque quam curabitur nullam cras, proin ante aliquet ullamcorper maecenas pretium lobortis, ac lectus odio fringilla laoreet eget. tortor sit ut vivamus ut nunc commodo nam, id lectus hendrerit ornare donec magna, vel arcu enim odio etiam lorem. venenatis</p>
-                <button>Try now</button>
+                <button class="button_third">Try now</button>
             </div>
 
             <div class="second_content">
@@ -155,6 +155,10 @@
 
                 <div class="card_fourth">
                     <img src="public/assets/articles/09.jpg">
+                </div>
+
+                <div class="card_fourth">
+                    <img src="public/assets/articles/10.jpg">
                 </div>
 
                 <div class="card_fourth">
