Projeto Infusion - Responsive CSS

--- a/-project-files/Projeto Infusion/index.html
+++ b/-project-files/Projeto Infusion/index.html
@@ -211,6 +211,12 @@
                     <p class="comments">Pretium eu venenatis commodo mollis potenti fermentum magna, mi magna torquent cursus molestie etiam. nulla class venenatis proin convallis nulla lorem ullamcorper torquent risus arcu, torquent etiam egestas gravida aptent ut dictumst hendrerit.</p>
                     <p class="author">Author</p>
                 </div>
+
+                <div class="card_comments">
+                    <span class="material-icons quote">format_quote</span>
+                    <p class="comments">Habitasse rutrum luctus integer ac maecenas elementum magna congue, dolor tincidunt est quisque ultricies curabitur tempus eu, lorem ac nunc erat turpis rhoncus donec. auctor arcu orci primis porta massa arcu sodales in inceptos, maecenas varius.</p>
+                    <p class="author">Author</p>
+                </div>
             </div>
         </section>
     </main>
